--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,11 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
+      working-directory: ./alfred
       run: dotnet restore
     - name: Build
+      working-directory: ./alfred
       run: dotnet build --no-restore
     - name: Test
+      working-directory: ./alfred
       run: dotnet test --no-build --verbosity normal
