--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -1,4 +1,4 @@
-name: deploy to lambda
+name: Deploy to Lambda
 on:
   # Trigger the workflow on push or pull request,
   # but only for the main branch
